SERVER-7 > добавил создание трека

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,4 @@ DB_PASSWORD=110502
 DB_HOST=localhost
 DB_PORT=5432
 SECRET_KEY=token_maslennikov
+FILE_PATH=C:\\Programmirovanie\\diplom\\diplom\\server\\files
