--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "sass": "^1.75.0",
     "uuid": "^9.0.1",
